--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
         <h1><a href="https://t.me/techloop100">SHRI 404 & ARJUN PANKHANIYA</a></h1>
 
         <div class="inline-details">
-            <div class="place">𝗣𝗜𝗔𝗖𝗘 : INDIA</div>
+            <div class="place">PLACE : INDIA</div>
             <div>STATE= GUJRAT</div>
-            <div class="best-friend"><a href="https://t.me/techloop100">𝗕𝗘𝗦𝗧 𝗙𝗥𝗜𝗘𝗡𝗗 →ARJUN PANKHANIYA</a></div>
+            <div class="best-friend"><a href="https://t.me/techloop100">𝗕𝗘𝗦𝗧 𝗙𝗥𝗜𝗘𝗡𝗗 →ARJUN PANKHANIYA & SHRI 404</a></div>
         </div>
 
         <div class="section">
@@ -143,7 +143,7 @@
         </div>
 
         <div class="section admins">
-            <h2>𝗔𝗗𝗠𝗜𝗡𝗦 𝗢𝗡 𝗖𝗛𝗔𝗡𝗡𝗘𝗜𝗦</h2>
+            <h2>ADMIN CHANNEL</h2>
             <ul>
                 <li><a href="https://www.youtube.com/@techloop10">YOUTUBE CHANNEL</a></li>
                 <li><a href="https://t.me/techloop10">TELEGRAM DISCUSSION CHANNEL</a></li>
